[tool.poetry]
name = "repytile"
version = "0.1.0"
description = ""
authors = ["Robson Cruz <ghost0092@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
